[package]
name = "organize_files"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
dirs = "5.0.1"

[target.x86_64-pc-windows-gnu]
linker = 'x86_64-w64-mingw32-gcc'
